--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="txt_signIn">S\'enregistrer avec Google</string>
     <string name="desc_goBack">go back</string>
     <string name="title_createAccount">Création de compte</string>
+    <string name="desc_profilePic">profile picture</string>
 </resources>
