tout le create account ça marche and looks nickelou pilou

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,15 +2,23 @@
 <resources>
     <string name="app_name">Foodie Buddies</string>
 
+    <string name="button_addProfilePicture">Ajouter une photo de profil</string>
+    <string name="button_cancel">Annuler</string>
+    <string name="button_save">Sauvegarder</string>
+    <string name="button_signIn">S\'enregistrer</string>
+
     <string name="desc_appLogo">app logo</string>
     <string name="desc_goBack">go back</string>
     <string name="desc_googleLogo">google logo</string>
     <string name="desc_profilePic">profile picture</string>
+    <string name="desc_textFieldIcon">text field icon</string>
+
+    <string name="field_bio">Bio</string>
+    <string name="field_maxChar">max. %1$s caractères</string>
+    <string name="field_username">Nom d\'utilisateur</string>
 
     <string name="title_createAccount">Création de compte</string>
 
     <string name="toast_internetCo">Une erreur de réseau est survenue. Merci de vérifier ta connexion Internet.</string>
     <string name="toast_unknownError">Une erreur est survenue, merci de réessayer. Si le bug persiste, contacte Alice !</string>
-
-    <string name="txt_signIn">S\'enregistrer avec Google</string>
 </resources>
