--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,14 +14,14 @@
     <string name="button_signIn">S\'enregistrer</string>
     <string name="button_signOut">Se déconnecter</string>
 
-    <string name="desc_appLogo">app logo</string>
-    <string name="desc_burgerMenu">burger menu</string>
-    <string name="desc_dstIcon">destination icon</string>
-    <string name="desc_goBack">go back</string>
-    <string name="desc_googleLogo">google logo</string>
-    <string name="desc_loading">loadingIcon</string>
-    <string name="desc_profilePic">profile picture</string>
-    <string name="desc_textFieldIcon">text field icon</string>
+    <string name="desc_appLogo">logo app</string>
+    <string name="desc_burgerMenu">menu</string>
+    <string name="desc_dstIcon">icone de destination</string>
+    <string name="desc_goBack">retour</string>
+    <string name="desc_googleLogo">logo google</string>
+    <string name="desc_loading">chargement</string>
+    <string name="desc_profilePic">photo de profil</string>
+    <string name="desc_textFieldIcon">icone du champ de texte</string>
 
     <string name="dst_account">Profil</string>
     <string name="dst_settings">Paramètres</string>
@@ -30,12 +30,26 @@
     <string name="field_maxChar">max. %1$s caractères</string>
     <string name="field_username">Nom d\'utilisateur</string>
 
+    <string name="notifChannel_newFavourite">Nouveau "favori" sur ta recette</string>
+    <string name="notifChannel_newRecipe">Nouvelle recette ajoutée</string>
+    <string name="notifChannel_newUser">Nouvel utilisateur</string>
+
+    <string name="notifDesc_newFavourite">Notifies you when a user has added your recipe to their favourites.</string>
+    <string name="notifDesc_newRecipe">Notifies you when a user has added a new recipe.</string>
+    <string name="notifDesc_newUser">Notifies you when a new user joins the app.</string>
+
     <string name="title_account">Compte</string>
+    <string name="title_language">Langue</string>
+    <string name="title_notifications">Notifications</string>
     <string name="title_recipes">Recettes</string>
     <string name="title_settings">Paramètres</string>
+    <string name="title_theme">Thème</string>
 
     <string name="toast_internetCo">Une erreur de réseau est survenue. Merci de vérifier ta connexion Internet.</string>
     <string name="toast_unknownError">Une erreur est survenue, merci de réessayer. Si le bug persiste, contacte Alice !</string>
 
     <string name="txt_numberRecipes">Total de recettes ajoutées : %1$s</string>
+    <string name="txt_systemDark">Sombre</string>
+    <string name="txt_systemDefault">Thème par défault du système</string>
+    <string name="txt_systemLight">Clair</string>
 </resources>
