--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -19,6 +19,7 @@
     <string name="button_save">Save</string>
     <string name="button_signIn">Log in</string>
     <string name="button_signOut">Log out</string>
+    <string name="button_terms">Terms and Conditions</string>
     <string name="button_termsConditions">Tap to accept Terms and Conditions (mandatory)</string>
 
     <string name="desc_appLogo">app logo</string>
@@ -31,14 +32,19 @@
     <string name="desc_textFieldIcon">text field icon</string>
 
     <string name="dst_account">Profile</string>
+    <string name="dst_fridge">My Fridge</string>
+    <string name="dst_groceries">Groceries</string>
+    <string name="dst_recipes">Recipes</string>
     <string name="dst_settings">Settings</string>
 
     <string name="field_bio">Bio</string>
     <string name="field_maxChar">max. %1$s characters</string>
     <string name="field_username">Username</string>
 
-    <string name="title_account">Account</string>
     <string name="title_about">About</string>
+    <string name="title_account">Account</string>
+    <string name="title_fridge">My Fridge</string>
+    <string name="title_groceries">Groceries list</string>
     <string name="title_language">Language</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_recipes">Recipes</string>
@@ -52,5 +58,4 @@
     <string name="txt_systemDark">Dark</string>
     <string name="txt_systemDefault">System default</string>
     <string name="txt_systemLight">Light</string>
-    <string name="button_terms">Terms and Conditions</string>
 </resources>
