--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,14 +33,19 @@
     <string name="desc_textFieldIcon">icone du champ de texte</string>
 
     <string name="dst_account">Profil</string>
+    <string name="dst_fridge">Mon Frigo</string>
+    <string name="dst_groceries">Courses</string>
+    <string name="dst_recipes">Recettes</string>
     <string name="dst_settings">Paramètres</string>
 
     <string name="field_bio">Bio</string>
     <string name="field_maxChar">max. %1$s caractères</string>
     <string name="field_username">Nom d\'utilisateur</string>
 
-    <string name="title_account">Compte</string>
     <string name="title_about">À propos</string>
+    <string name="title_account">Compte</string>
+    <string name="title_fridge">Mon Frigo</string>
+    <string name="title_groceries">Liste de courses</string>
     <string name="title_language">Langue</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_recipes">Recettes</string>
