UI for editing grocery lists is done, working on cleanin up the functionality

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -62,4 +62,5 @@
     <string name="txt_systemDark">Dark</string>
     <string name="txt_systemDefault">System default</string>
     <string name="txt_systemLight">Light</string>
+    <string name="button_addCategory">Add a category</string>
 </resources>
