--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -63,4 +63,5 @@
     <string name="txt_systemDefault">System default</string>
     <string name="txt_systemLight">Light</string>
     <string name="button_addCategory">Add a category</string>
+    <string name="toast_categoryName">This category already exists</string>
 </resources>
