--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="desc_googleLogo">logo google</string>
     <string name="desc_loading">chargement</string>
     <string name="desc_profilePic">photo de profil</string>
+    <string name="desc_shop">"bouton "ajouter à la liste de courses"</string>
     <string name="desc_textFieldIcon">icone du champ de texte</string>
 
     <string name="dst_account">Profil</string>
@@ -63,6 +64,7 @@
     <string name="toast_internetCo">Une erreur de réseau est survenue. Merci de vérifier ta connexion Internet.</string>
     <string name="toast_unknownError">Une erreur est survenue, merci de réessayer. Si le bug persiste, contacte Alice !</string>
 
+    <string name="txt_emptyFridge">Ton frigo est vide.\nAppuie sur le bouton Modification pour ajouter des articles.</string>
     <string name="txt_emptyGroceries">Ta liste de courses est vide.\nAppuie sur le bouton Modification pour ajouter des articles.</string>
     <string name="txt_numberRecipes">Total de recettes ajoutées : %1$s</string>
     <string name="txt_systemDark">Sombre</string>
