--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?>
 <resources>
+    <string name="alert_clearList">Are you sure you want to clear this list?\nThis action cannot be undone.</string>
     <string name="alert_deleteAccount">Are you sure you want to delete your account?\nThis cannot be undone.</string>
     <string name="alert_deleteCatFridge">Warning: this action will also delete this category and all its elements in \"Groceries list\"</string>
     <string name="alert_deleteCatGroceries">Warning: this action will also delete this category and all its elements in \"My Fridge\"</string>
@@ -16,10 +17,12 @@
     <string name="button_addItem">Add an item</string>
     <string name="button_addProfilePicture">Add a profile picture</string>
     <string name="button_cancel">Cancel</string>
+    <string name="button_clearList">Clear entire list</string>
     <string name="button_delete">Delete</string>
     <string name="button_deleteAccount">Delete account</string>
     <string name="button_edit">Edit</string>
     <string name="button_modifyProfilePicture">Edit your profile picture</string>
+    <string name="button_options">options</string>
     <string name="button_save">Save</string>
     <string name="button_signIn">Log in</string>
     <string name="button_signOut">Log out</string>
