--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <resources>
+    <string name="alert_clearList">Es-tu sûr.e de vouloir effacer cette liste?\nCette action n\'est pas réversible.</string>
     <string name="alert_deleteAccount">Es-tu sûr.e de vouloir supprimer ton compte?\nCette action n\'est pas réversible.</string>
     <string name="alert_deleteCatFridge">Attention: cette action va également supprimer cette catégorie et tous ces éléments dans \"Liste de Courses\".</string>
     <string name="alert_deleteCatGroceries">Attention: cette action va également supprimer cette catégorie et tous ces éléments dans \"Mon Frigo\".</string>
@@ -17,10 +18,12 @@
     <string name="button_addItem">Ajouter un article</string>
     <string name="button_addProfilePicture">Ajouter une photo de profil</string>
     <string name="button_cancel">Annuler</string>
+    <string name="button_clearList">Effacer toute la liste</string>
     <string name="button_delete">Supprimer</string>
     <string name="button_deleteAccount">Supprimer le compte</string>
     <string name="button_edit">Modifier</string>
     <string name="button_modifyProfilePicture">Modifier la photo de profil</string>
+    <string name="button_options">options</string>
     <string name="button_save">Sauvegarder</string>
     <string name="button_signIn">S\'enregistrer</string>
     <string name="button_signOut">Se déconnecter</string>
