--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -23,7 +23,9 @@
     <string name="button_edit">Edit</string>
     <string name="button_modifyProfilePicture">Edit your profile picture</string>
     <string name="button_options">options</string>
+    <string name="button_reset">Reset</string>
     <string name="button_save">Save</string>
+    <string name="button_seeResults">Show results</string>
     <string name="button_sendToFridge">Send ticked items to Fridge</string>
     <string name="button_signIn">Log in</string>
     <string name="button_signOut">Log out</string>
@@ -36,6 +38,7 @@
     <string name="desc_delete">delete button</string>
     <string name="desc_dstIcon">destination icon</string>
     <string name="desc_edit">edit button</string>
+    <string name="desc_filters">filters</string>
     <string name="desc_goBack">go back</string>
     <string name="desc_googleLogo">google logo</string>
     <string name="desc_loading">loading</string>
@@ -57,6 +60,7 @@
     <string name="dst_settings">Settings</string>
 
     <string name="field_bio">Bio</string>
+    <string name="field_keywords">What are you searching for?</string>
     <string name="field_maxChar">max. %1$s characters</string>
     <string name="field_username">Username</string>
 
@@ -100,6 +104,7 @@
 
     <string name="title_about">About</string>
     <string name="title_account">Account</string>
+    <string name="title_filters">Filters</string>
     <string name="title_fridge">My Fridge</string>
     <string name="title_groceries">Groceries list</string>
     <string name="title_language">Language</string>
@@ -113,10 +118,13 @@
     <string name="toast_internetCo">Network error. Please check your network connection.</string>
     <string name="toast_unknownError">There was an error, please retry. If it keeps failing, please contact Alice!</string>
 
+    <string name="txt_allIngredientsOnly">Only if I have the ingredients</string>
     <string name="txt_emptyFridge">Your fridge is empty.\nTap the Edit button to add new items.</string>
     <string name="txt_emptyGroceries">Your shopping list is empty.\nTap the Edit button to add new items.</string>
+    <string name="txt_favouriteOnly">Only favourite recipes</string>
     <string name="txt_noBuddies">There are no other Buddies on the app for now!</string>
     <string name="txt_noRecipes">There are no recipes on the app for now!</string>
+    <string name="txt_noResults">There are no recipes corresponding to those filters.</string>
     <string name="txt_numberRecipes">Total number of added recipes: %1$s</string>
     <string name="txt_recipeCreator">Created by %1$s</string>
     <string name="txt_systemDark">Dark</string>
