--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -105,13 +105,17 @@
 
     <string name="title_about">About</string>
     <string name="title_account">Account</string>
+    <string name="title_creator">Creator</string>
+    <string name="title_diet">Diet</string>
     <string name="title_filters">Filters</string>
     <string name="title_fridge">My Fridge</string>
     <string name="title_groceries">Groceries list</string>
     <string name="title_language">Language</string>
     <string name="title_notifications">Notifications</string>
+    <string name="title_origin">Origin</string>
     <string name="title_recipes">Recipes</string>
     <string name="title_settings">Settings</string>
+    <string name="title_tag">Tags</string>
     <string name="title_theme">Theme</string>
 
     <string name="toast_categoryName">This category already exists</string>
@@ -123,6 +127,7 @@
     <string name="txt_emptyFridge">Your fridge is empty.\nTap the Edit button to add new items.</string>
     <string name="txt_emptyGroceries">Your shopping list is empty.\nTap the Edit button to add new items.</string>
     <string name="txt_favouriteOnly">Only favourite recipes</string>
+    <string name="txt_me">Me</string>
     <string name="txt_noBuddies">There are no other Buddies on the app for now!</string>
     <string name="txt_noRecipes">There are no recipes on the app for now!</string>
     <string name="txt_noResults">There are no recipes corresponding to those filters.</string>
